objects/Lead.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product Type. The options for this field are dependent on the Product Line field. The options available for the Product selections are dependent on this field.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Special Revolving Line of Credit</fullName>
                </value>
                <value>
                    <fullName>CML Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>AG Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>CML Leases</fullName>
                </value>
                <value>
                    <fullName>AG Leases</fullName>
                </value>
                <value>
                    <fullName>Guidance Line</fullName>
                </value>
                <value>
                    <fullName>Bridge Loans</fullName>
                </value>
                <value>
                    <fullName>7(a)</fullName>
                </value>
                <value>
                    <fullName>7(a) Capline</fullName>
                </value>
                <value>
                    <fullName>SBA Express</fullName>
                </value>
                <value>
                    <fullName>Export Express</fullName>
                </value>
                <value>
                    <fullName>Export Working Capital</fullName>
                </value>
                <value>
                    <fullName>International Trade</fullName>
                </value>
                <value>
                    <fullName>504 Program</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Management Solutions</fullName>
                </value>
                <value>
                    <fullName>Payable Solutions</fullName>
                </value>
                <value>
                    <fullName>Receivable Solutions</fullName>
                </value>
                <value>
                    <fullName>Liquidity Solutions</fullName>
                </value>
                <value>
                    <fullName>Fraud Solutions</fullName>
                </value>
                <value>
                    <fullName>Business Deposits</fullName>
                </value>
                <value>
                    <fullName>Public Funds</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CDs</fullName>
                </value>
                <value>
                    <fullName>IRAs</fullName>
                </value>
                <value>
                    <fullName>HSAs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product. The options for this field are dependent on the Product Line and Product Type field.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Non Revolving Line of Credit (Draw)</fullName>
                </value>
                <value>
                    <fullName>Revolving Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Mortgage Warehousing Line</fullName>
                </value>
                <value>
                    <fullName>Dealer Floor Plan</fullName>
                </value>
                <value>
                    <fullName>Stand by</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Municipal Lease</fullName>
                </value>
                <value>
                    <fullName>Single Disbursement</fullName>
                </value>
                <value>
                    <fullName>Term Loan</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>General Use</fullName>
                </value>
                <value>
                    <fullName>Multi User</fullName>
                </value>
                <value>
                    <fullName>EDI Addenda Translation</fullName>
                </value>
                <value>
                    <fullName>BAI File Download</fullName>
                </value>
                <value>
                    <fullName>SFTP File Transfer</fullName>
                </value>
                <value>
                    <fullName>ACH Credit Origination</fullName>
                </value>
                <value>
                    <fullName>ACH Debit Origination</fullName>
                </value>
                <value>
                    <fullName>Third Party Sender</fullName>
                </value>
                <value>
                    <fullName>Wire Transmission</fullName>
                </value>
                <value>
                    <fullName>Business BillPay</fullName>
                </value>
                <value>
                    <fullName>Credit Card Small Business</fullName>
                </value>
                <value>
                    <fullName>Credit Card Corporate</fullName>
                </value>
                <value>
                    <fullName>Credit Card Purchasing</fullName>
                </value>
                <value>
                    <fullName>Low Speed RDC</fullName>
                </value>
                <value>
                    <fullName>High Speed RDC</fullName>
                </value>
                <value>
                    <fullName>Mobile RDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Referred_To__c</fullName>
        <description>This picklist specifies whether the lead was referred to another financial institution, another branch or maybe another department. It can be controlled by the financial institution. It is optional and manually populated.</description>
        <label>Referred To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BofA</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue__c</fullName>
        <description>This field is optional and specifies the Lead&apos;s potential revenue amount. It is manually populated.</description>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SICCode__c</fullName>
        <description>This field is optional and specifies the Standard Industrial Classification (SIC) code for the Lead’s associated industry. SIC is a system for classifying industries by a four-digit code. The field is manually populated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Source_Details__c</fullName>
        <description>Used to document lead source details, specifically when lead source = other</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please let us know what Other Lead Source was used</inlineHelpText>
        <label>Lead Source Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Purpose Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose_for_nCino__c</fullName>
        <description>Loan Purpose - Field corresponds with Loan and Opportunity</description>
        <label>Loan Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>Purchase Existing Business</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Purchase Business Real Estate</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Purchase Income Producing Real Estate</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Purchase Non Real Estate Business Assets</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Purchase Real Estate for Future Development</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Building Improvements</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>New Commercial Building Construction</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Construction of Dwelling for Resale/Rental</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Working Capital</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Negotiable Instruments</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Refinance</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Contract Services</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Purchase Real Estate</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>Improve Real Estate</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>Purchase Machinery</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>Purchase Equipment</label>
                </value>
                <value>
                    <fullName>34</fullName>
                    <label>Purchase Cattle</label>
                </value>
                <value>
                    <fullName>35</fullName>
                    <label>Purchase Hogs</label>
                </value>
                <value>
                    <fullName>38</fullName>
                    <label>Crop Production</label>
                </value>
                <value>
                    <fullName>39</fullName>
                    <label>General Operating</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>Refinance Real Estate</label>
                </value>
                <value>
                    <fullName>42</fullName>
                    <label>Refinance Machinery</label>
                </value>
                <value>
                    <fullName>43</fullName>
                    <label>Refinance Equipment</label>
                </value>
                <value>
                    <fullName>44</fullName>
                    <label>Refinance Cattle</label>
                </value>
                <value>
                    <fullName>45</fullName>
                    <label>Refinance Hogs</label>
                </value>
                <value>
                    <fullName>46</fullName>
                    <label>Refinance Debt Elsewhere</label>
                </value>
                <value>
                    <fullName>47</fullName>
                    <label>Purchase Horses</label>
                </value>
                <value>
                    <fullName>48</fullName>
                    <label>Mo-Bucks&apos;86</label>
                </value>
                <value>
                    <fullName>49</fullName>
                    <label>Refinance Operating</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>Purchase New Vehicle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Communication__c</fullName>
        <label>Preferred Method of Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Deposit_External_Referrer__c</fullName>
        <description>This field is used on TM and Deposit type record pages</description>
        <label>External Referrer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Realtor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_OwnedByLoginUser__c</fullName>
        <formula>IF(OwnerId = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned By LoginUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <description>Reasons why prospect lead was unqualified</description>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response from Prospect</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                    <isActive>false</isActive>
                    <label>Products</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Lead_CS_Due_Diligence</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Open Leads &amp; Referrals</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Referrals I Created</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>FinServ__ReferrerScore__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <label>Closed Referrals I&apos;m Assigned</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Referrals I Created</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>FinServ__ReferrerScore__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <label>Open Referrals I&apos;m Assigned</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Leads_this_Month</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Mktg: Uncoverted Leads this Month</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__My_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted,Nurturing,Qualified,Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.LE_nCino_Deposit,Lead.LE_nCino_Loan_Custom,Lead.LE_nCino_Loan_Individual,Lead.LE_nCino_Treasury_Management</value>
        </filters>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Pharmacy_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LLC_BI__Lead_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.INDUSTRY</field>
            <operation>equals</operation>
            <value>Pharmacy</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Long Term</value>
        </filters>
        <label>Pharmacy Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Recent_Leads_All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <label>Recent Leads - All</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Website_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Underwood</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Website Leads</label>
    </listViews>
    <recordTypes>
        <fullName>FinServ__BusinessReferral</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <description>A business or organization that is a commercial banking business referral​</description>
        <label>Business Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>false</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Referral</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <description>A person, business, or organization that is a referral</description>
        <label>Person Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__RetirementPlanning</fullName>
        <active>false</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>Retirement Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>LE_nCino_Deposit</fullName>
        <active>true</active>
        <businessProcess>Deposit Lead Process</businessProcess>
        <description>Select for a New nCino Deposit Lead</description>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>LE_nCino_Loan_Custom</fullName>
        <active>true</active>
        <businessProcess>Lead Loan Process</businessProcess>
        <description>Select for a New nCino Loan Business Lead</description>
        <label>Loan - Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>LE_nCino_Loan_Individual</fullName>
        <active>true</active>
        <businessProcess>Lead Loan Process</businessProcess>
        <description>Select for a New nCino Loan Individual Lead</description>
        <label>Loan - Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>LE_nCino_Treasury_Management</fullName>
        <active>true</active>
        <businessProcess>Treasury Lead Process TBOM</businessProcess>
        <description>Select for a New nCino Treasury Management Lead</description>
        <label>Treasury Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Loan</fullName>
        <active>false</active>
        <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
        <description>Select for a New Loan Opportunity</description>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Treasury_Management</fullName>
        <active>false</active>
        <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
        <description>Select for a New Treasury Management Opportunity</description>
        <label>Treasury Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_CS_Due_Diligence</fullName>
        <active>true</active>
        <businessProcess>Lead CS Due Diligence</businessProcess>
        <label>Lead CS Due Diligence</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
        AND( 
            OR($RecordType.DeveloperName = &quot;Referral&quot;, 
                $RecordType.DeveloperName = &quot;BusinessReferral&quot;),
            NOT(ISBLANK( FinServ__ReferredByUser__c )), 
            NOT(ISBLANK( FinServ__ReferredByContact__c )) 
        ), 
        AND ( 
            OR($RecordType.DeveloperName = &quot;Referral&quot;, 
                $RecordType.DeveloperName = &quot;BusinessReferral&quot;), 
            ISBLANK( FinServ__ReferredByUser__c ), 
            ISBLANK( FinServ__ReferredByContact__c ) 
        ) 
    )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_VR_PhoneOrEmailRequired</fullName>
        <active>true</active>
        <description>Ability to require a Phone &amp; Email when converting a Treasury Management or Deposit Lead to an Opportunity</description>
        <errorConditionFormula>AND(IsConverted = TRUE, OR( RecordType.DeveloperName  = &quot;LE_nCino_Deposit&quot; ,RecordType.DeveloperName  = &quot;LE_nCino_Treasury_Management&quot;),OR(ISBLANK(Email),AND(ISBLANK(Phone ),ISBLANK(MobilePhone))))</errorConditionFormula>
        <errorMessage>&quot;Please ensure an email address and either a primary phone or mobile phone number have been filled out to convert to an Opportunity.&quot;</errorMessage>
    </validationRules>
</CustomObject>